Wed Feb 11 23:24:22 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: properly treat a Tcl/Tk's string with escaping
	  special characters.

Tue Feb 10 20:49:07 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (method_proc): return bound Proc object.  [ruby-dev:22854]

	* eval.c (rb_mod_define_method): bind method body itself for Method
	  object.

	* node.h (NODE_DMETHOD): deprecated.

	* object.c (rb_class_inherited_p): export.

Tue Feb 10 16:43:50 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (umethod_bind): purge unused check.  [ruby-dev:22850]

Tue Feb 10 14:33:08 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* string.c (rb_str_match): raise TypeError when both arguments are
	  strings. [ruby-dev:22851]

	* string.c (rb_str_match2): removed.

	* Makefile.in, bcc32/Makefile.sub, win32/Makefile.sub,
	  wince/Makefile.sub (string.c): now not depend on version.h.

Mon Feb  9 17:46:07 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, bcc32/Makefile.sub, win32/Makefile.sub, configure.in,
	  runruby.rb: run rdoc, test and so on with compiled extension
	  libraries.  [ruby-dev:22688]

	* ext/extmk.rb, lib/mkmf.rb: make extension libraries in separated
	  directory, similar to the actual directory structure.

	* lib/fileutils.rb (FileUtils.copy_file): use the mode of the original
	  file to create new file.

	* lib/rdoc/ri/ri_paths.rb (RI::Paths::SYSDIR): get rid of unexpected
	  influence by envirionment variable.

	* bcc32/configure.bat, win32/configure.bat: add install-doc options.

	* win32/win32.c, win32/win32.h (rb_w32_fstat): fix Borland C runtime
	  bug which returns wrong mode.  [ruby-dev:22846]

Mon Feb  9 16:30:12 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (detach_process_watcher): return the last status.
	  [ruby-dev:22841]

Sun Feb  8 16:46:08 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/pp.rb (PP::PPMethods::object_address_group): suppress negative
	  sign for higher heap areas.
